Scroll inside Templates modal to avoid dismissing when clicking scrollbar outside it [stage-1]

--- a/web/scss/ui-components/template-picker.scss
+++ b/web/scss/ui-components/template-picker.scss
@@ -1,4 +1,10 @@
 .product-grid {
+
+  .panel {
+    max-height: calc(100vh - 275px);
+    overflow-y: auto;
+  }
+
   .product-grid_image {
     overflow: hidden;
     background: #222;
